--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   font-family: Ubuntu;
   font-style: normal;
   width: 30%;
-  padding-top: 10%;
+  margin-top: 10%;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
